[build-system]
requires = ["setuptools<81", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "legged-lab-env"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "isaaclab==2.3.1",
    "isaacsim[all,extscache]==5.1.0.0",
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "legged-lab",
    "markupsafe==2.1.3",
    "networkx==3.3",
    "numpy==1.26.0",
    "pillow==11.3.0",
    "rsl-rl-lib",
    "stable-baselines3>=2.6",
    "skrl>=1.4.3",
    "rich",
    "tqdm",
    "onnxscript>=0.5",
    "torch==2.7.0+cu128",
    "torchvision==0.22.0+cu128",
    "torchaudio==2.7.0+cu128",
    "sympy==1.13.3",
    "typing-extensions==4.12.2",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
override-dependencies = [
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "networkx==3.3",
    "pywin32==306 ; sys_platform == 'win32'",
]

[tool.uv.extra-build-dependencies]
flatdict = ["setuptools==80.9.0"]

[tool.uv.sources]
legged-lab = { path = "source/legged_lab", editable = true }
rsl-rl-lib = { path = "rsl_rl", editable = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
isaaclab = { index = "nvidia" }
isaacsim = { index = "nvidia" }
isaacsim-app = { index = "nvidia" }
isaacsim-asset = { index = "nvidia" }
isaacsim-benchmark = { index = "nvidia" }
isaacsim-code-editor = { index = "nvidia" }
isaacsim-core = { index = "nvidia" }
isaacsim-cortex = { index = "nvidia" }
isaacsim-example = { index = "nvidia" }
isaacsim-extscache-kit = { index = "nvidia" }
isaacsim-extscache-kit-sdk = { index = "nvidia" }
isaacsim-extscache-physics = { index = "nvidia" }
isaacsim-gui = { index = "nvidia" }
isaacsim-kernel = { index = "nvidia" }
isaacsim-replicator = { index = "nvidia" }
isaacsim-rl = { index = "nvidia" }
isaacsim-robot = { index = "nvidia" }
isaacsim-robot-motion = { index = "nvidia" }
isaacsim-robot-setup = { index = "nvidia" }
isaacsim-ros1 = { index = "nvidia" }
isaacsim-ros2 = { index = "nvidia" }
isaacsim-sensor = { index = "nvidia" }
isaacsim-storage = { index = "nvidia" }
isaacsim-template = { index = "nvidia" }
isaacsim-test = { index = "nvidia" }
isaacsim-utils = { index = "nvidia" }
warp-lang = { index = "nvidia" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.isort]

atomic = true
profile = "black"
line_length = 120
py_version = 310
skip_glob = ["docs/*", "logs/*"]
group_by_package = true

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "ISAACLABPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
extra_standard_library = [
    "numpy",
    "h5py",
    "open3d",
    "torch",
    "tensordict",
    "bpy",
    "matplotlib",
    "gymnasium",
    "gym",
    "scipy",
    "hid",
    "yaml",
    "prettytable",
    "toml",
    "trimesh",
    "tqdm",
    "psutil",
]
known_thirdparty = [
    "isaacsim.core.api",
    "omni.replicator.core",
    "pxr",
    "omni.kit.*",
    "warp",
    "carb",
    "Semantics",
]
known_isaaclabparty = [
    "isaaclab",
    "isaaclab_tasks",
    "isaaclab_assets",
    "isaaclab_mimic",
    "isaaclab_rl"
]

# Modify the following to include the package names of your first-party code
known_firstparty = "legged_lab"
known_local_folder = "config"

[tool.pyright]

exclude = [
    "**/__pycache__",
    "**/docs",
    "**/logs",
    ".git",
    ".vscode",
]

typeCheckingMode = "off"
pythonVersion = "3.10"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy, torch, prettytable)
# Therefore, we have to ignore missing imports
reportMissingImports = "none"
# This is required to ignore for type checks of modules with stubs missing.
reportMissingModuleSource = "none" # -> most common: prettytable in mdp managers

reportGeneralTypeIssues = "none"       # -> raises 218 errors (usage of literal MISSING in dataclasses)
reportOptionalMemberAccess = "warning" # -> raises 8 errors
reportPrivateUsage = "warning"
